<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homePage"
            android:checked="true"
            android:icon="@drawable/outline_home_black_24"
            android:title="@string/home_page" />
        <item
            android:id="@+id/communities"
            android:icon="@drawable/ic_action_group"
            android:title="@string/communities" />
        <item
            android:id="@+id/createPost"
            android:icon="@drawable/ic_action_new"
            android:title="@string/createPost" />
        <item
            android:id="@+id/createCommunities"
            android:icon="@drawable/ic_action_group"
            android:title="@string/createCommunity" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:id="@+id/login"
                android:icon="@drawable/ic_action_person"
                android:title="@string/login" />
            <item
                android:id="@+id/register"
                android:icon="@drawable/ic_action_person"
                android:title="@string/register" />
        </menu>
    </item>

    <item android:title="Logout"
        android:id="@+id/logout"
        android:visible="false"/>

</menu>